--- a/index.html
+++ b/index.html
@@ -34,6 +34,26 @@
                 <span class="tempo">Segundos</span>
             </div>
         </div>
+        <section>
+            <footer>
+                <a href="https://github.com/professor-rafael" target="_blank" rel="noopener noreferrer">
+                    <img src="github.png"></img>
+                    <p>Github</p>
+                </a>
+                <a href="https://www.linkedin.com/in/rafael-assis-santos-3384b220a/?originalSubdomain=br" target="_blank" rel="noopener noreferrer">
+                    <img src="linkedin.png"></img>
+                    <p>Linkedin</p>
+                </a>
+                <a href="https://www.youtube.com/channel/UCBRq6fO_-P6yPOVbC0yZVmQ" target="_blank" rel="noopener noreferrer">
+                    <img src="youtube.png"></img>
+                    <p>Youtube</p>
+                    <a href="https://chatgpt.com/" target="_blank" rel="noopener noreferrer">
+                        <img src="ia.png"></img>
+                        <p>Chat GPT</p>
+                    </a>
+                </a>
+            </footer>
+        </section>
     </div>
     
 </body>
