--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
     <div class="caixa-principal">
-        <h1>Você decide o futuro da IA 3º Ano B</h1>
+        <h1>Professor-Rafael</h1>
+        <h2>Você decide o futuro da IA 3º Ano B</h2>
         <div class="caixa-perguntas"></div>
         <div class="caixa-alternativas"></div>
         <div class="caixa-resultado">
