--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <span id="horas">00</span>
                 <span class="tempo">Horas</span>
             </div>
-    
+    <!-- Professor-Rafael -->
             <div>
                 <span id="minutos">00</span>
                 <span class="tempo">Minutos</span>
