--- a/index.html
+++ b/index.html
@@ -48,6 +48,10 @@
                 <a href="https://www.youtube.com/channel/UCBRq6fO_-P6yPOVbC0yZVmQ" target="_blank" rel="noopener noreferrer">
                     <img src="youtube.png"></img>
                     <p>Youtube</p>
+                     <a href="https://api.whatsapp.com/send?phone=5543996561825" target="_blank" rel="noopener noreferrer">
+                    <img src="Whatsapp.png"></img>
+                    <p>whatsapp</p>
+                    </a>
                     <a href="https://chatgpt.com/" target="_blank" rel="noopener noreferrer">
                         <img src="ia.png"></img>
                         <p>Chat GPT</p>
