--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     <p>Youtube</p>
                      <a href="https://api.whatsapp.com/send?phone=5543996561825" target="_blank" rel="noopener noreferrer">
                     <img src="Whatsapp.png"></img>
-                    <p>whatsapp</p>
+                    <p>Whatsapp</p>
                     </a>
                     <a href="https://chatgpt.com/" target="_blank" rel="noopener noreferrer">
                         <img src="ia.png"></img>
