--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </div>
         <br>
         <p>
-            Relógio IA
+            Relógio I ╰(*°▽°*)╯ A
         </p>
         <div class="relogio">
             <div>
