--- a/index.html
+++ b/index.html
@@ -6,6 +6,32 @@
     <link rel="stylesheet" href="style.css">
     <title>O futuro da IA, está em suas mãos</title>
 </head>
+    <style>
+    body{
+    min-height:14vh;
+    }
+
+    ::-webkit-scrollbar 
+    {
+        width: 12px;
+    }
+
+    ::-webkit-scrollbar-track 
+    {
+        background: green;
+    }
+
+    ::-webkit-scrollbar-thumb 
+    {
+        background: #323683;
+        border-radius: 14px;
+    }
+
+    ::-webkit-scrollbar-thumb:hover 
+    {
+        opacity: .95;
+    }
+  </style>
 <body>
     <div class="caixa-principal">
         <br>
@@ -19,7 +45,7 @@
         </div>
         <br>
         <p>
-            Relógio I╰(*°▽°*)╯A
+            Relógio IA
         </p>
         <div class="relogio">
             <div>
