--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+      <link rel="icon" href="icon.png">
     <title>O futuro da IA, está em suas mãos</title>
 </head>
     <style>
