--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-      <link rel="icon" href="icon.png">
+    <link rel="icon" href="icon.png">
     <title>O futuro da IA, está em suas mãos</title>
 </head>
-    <style>
+<style>
     body{
-    min-height:130vh;
+    min-height:150vh;
     }
 
     ::-webkit-scrollbar 
@@ -36,7 +36,7 @@
 <body>
     <div class="caixa-principal">
         <br>
-        <h1> ♠️ Professor ♠️ Rafael ♠️</h1>
+        <h1>RasinformaticA</h1>
         <br>
         <h2>Você decide o futuro da IA 3º Ano B</h2>
         <div class="caixa-perguntas"></div>
@@ -53,7 +53,7 @@
                 <span id="horas">00</span>
                 <span class="tempo">Horas</span>
             </div>
-    <!-- Professor-Rafael -->
+    
             <div>
                 <span id="minutos">00</span>
                 <span class="tempo">Minutos</span>
@@ -70,20 +70,16 @@
                     <img src="github.png"></img>
                     <p>Github</p>
                 </a>
-                <a href="https://www.linkedin.com/in/rafael-assis-santos-3384b220a/?originalSubdomain=br" target="_blank" rel="noopener noreferrer">
-                    <img src="linkedin.png"></img>
-                    <p>Linkedin</p>
-                </a>
                 <a href="https://www.youtube.com/channel/UCBRq6fO_-P6yPOVbC0yZVmQ" target="_blank" rel="noopener noreferrer">
                     <img src="youtube.png"></img>
                     <p>Youtube</p>
-                     <a href="https://api.whatsapp.com/send?phone=5543996561825" target="_blank" rel="noopener noreferrer">
+                    <a href="https://api.whatsapp.com/send?phone=5543996561825" target="_blank" rel="noopener noreferrer">
                     <img src="Whatsapp.png"></img>
-                    <p>Whatsapp</p>
+                    <p>whatsapp</p>
                     </a>
-                    <a href="https://chatgpt.com/" target="_blank" rel="noopener noreferrer">
-                        <img src="ia.png"></img>
-                        <p>Chat GPT</p>
+                    <a href="https://www.deepseek.com/">
+                        <img src="deepseek-color.png"></img>
+                        <p>deepseek</p>
                     </a>
                 </a>
             </footer>
