--- a/index.html
+++ b/index.html
@@ -73,11 +73,11 @@
                     <p>Youtube</p>
                     <a href="https://api.whatsapp.com/send?phone=5543996561825" target="_blank" rel="noopener noreferrer">
                     <img src="Whatsapp.png"></img>
-                    <p>whatsapp</p>
+                    <p>Whatsapp</p>
                     </a>
                     <a href="https://www.deepseek.com/">
                         <img src="deepseek-color.png"></img>
-                        <p>deepseek</p>
+                        <p>Deepseek</p>
                     </a>
                 </a>
             </footer>
