--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <br>
         <h1>RasinformaticA</h1>
         <br>
-        <h2>Você decide o futuro da IA 3º Ano B</h2>
+        <h2>Você decide o futuro da IA</h2>
         <div class="caixa-perguntas"></div>
         <div class="caixa-alternativas"></div>
         <div class="caixa-resultado">
